# sticky-rs

./: .gitignore  Dockerfile  README-CN.md  README.md  build-in-container.sh  build_appimage.sh  context-menu.html  create-container.sh  main.html  package.json  pnpm-lock.yaml  popup-menu.html  run-container.sh  toolbar.html  vite.config.ts
locales/en/: translation.json
locales/zh-cn/: translation.json
src/: i18n.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: common.rs  events.rs  image_io.rs  main.rs  window.rs
src-tauri/template/: sticky-rs.desktop  sticky-rs.sh
src/common/: custom-event.ts  logger.ts  stack.ts  tool-name.ts  translation.ts  utils.ts  window-label.ts
src/components/: SvgButton.vue
src/pages/context-menu/: App.vue
src/pages/main/: cursor.ts  editor.ts  main.ts  scale-factor.ts  ui-container.ts
src/pages/main/graphs/: arrow.ts  ellipse.ts  eraser.ts  gaussian-blur.ts  graph.ts  image.ts  line.ts  mosaic.ts  rect.ts  text.ts
src/pages/main/tools/: abstract-annotation-tool.ts  arrow-tool.ts  ellipse-tool.ts  eraser-tool.ts  free-curve-tool.ts  gaussian-blur-tool.ts  marker-pen-tool.ts  mosaic-tool.ts  number-tool.ts  rectangle-tool.ts  straight-line-tool.ts  text-tool.ts
src/pages/popup-menu/: App.vue
src/pages/toolbar/: App.vue
