[package]
name = "sticky-rs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "window-all", "shell-open", "system-tray", "notification-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = { git = "https://gitee.com/fengzhongshaonian/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://gitee.com/fengzhongshaonian/plugins-workspace", branch = "v1" }
clap = { version = "4.5.4", features = ["derive"] }
base64 = "0.22.1"
image = "0.25.1"
log = "^0.4"
tauri-plugin-clipboard = "0.6.10"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
