[package]
name = "sticky-rs"
version = "2.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-single-instance = { version = "2" }
tauri-plugin-log = "2"
clap = { version = "4.5.4", features = ["derive"] }
base64 = "0.22.1"
image = "0.25.1"
log = "^0.4"
tauri-plugin-clipboard = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2.2.2"
tauri-plugin-clipboard-manager = "2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
